Fix alignment of social share buttons.
- fix vertical alignment of FB share button
- adjust spacing between buttons

--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -13,7 +13,12 @@ article {
         
         > div {
             display:inline-block;
-            min-width:120px;
+            width: 100px;
+            
+            &.google { width: 85px; }
+            
+            // vertically align facebook like button with other sharing icons
+            .fb-like > span { vertical-align: baseline !important; }
         }
     }
 
